[package]
name = "stream-protocol-lib"
version = "1.0.0"
edition = "2021"

[dependencies]
futures = "0.3"
pin-project = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
indexmap = { version = "2.2.3", features = ["serde"] }
serde_json = { version = "1", features = ["preserve_order"] }
log = "0.4"
unicode-segmentation = "1.11.0"

[dev-dependencies]
test-log = "0.2.16"