[package]
name = "stream-protocol-lib"
version = "1.0.0"
edition = "2021"

[features]
async = [] # This feature allows to get a version of JsonStreamParser which implements AsyncWrite

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
indexmap = { version = "2.2.3", features = ["serde"] }
serde_json = { version = "1", features = ["preserve_order"] }
log = "0.4"
unicode-segmentation = "1.12.0"
derivative = "2.2"

# Futures are not optional, as tools other than JsonStreamParser provided by this lib use them (such as JsonProtocolChunker)
futures = "0.3"
pin-project = "1"

[dev-dependencies]
test-log = "0.2.16"